# routes/authRoute.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const authController = require('../controllers/authCntroller')
-const {dataValidation ,updateValidation, paramValidation} = require('../middelware/validation/teacherValidation')
+const {validateLogin,validateSignup , changePassword} = require('../middelware/validation/authValidation')
 const validator = require('../middelware/validation/validator')
 const Router = express.Router();
 
-Router.post('/login',authController.post_login)
-Router.post('/signup',dataValidation,validator,authController.post_signup)
-Router.post('/changePass',authController.change_Password)
+Router.post('/login',validateLogin,validator,authController.post_login)
+Router.post('/signup',validateSignup,validator,authController.post_signup)
+Router.post('/changePass',changePassword,validator,authController.change_Password)
 
 
 module.exports = Router
